# CppRoyale

./: .gitignore  CMakeLists.txt  README.md
client/: Deck.cpp  Deck.hpp  GameClient.cpp  GameClient.hpp  NameGenerator.hpp  Renderer.cpp  Renderer.hpp  UIScreen.cpp  UIScreen.hpp  main.cpp
client/game/: Deck.cpp  Deck.hpp
client/network/: GameClient.cpp  GameClient.hpp
client/ui/: NameGenerator.hpp
client/ui/renderer/: Renderer.cpp  Renderer.hpp
server/: ClientSession.hpp  Entity.cpp  Entity.hpp  GameServer.cpp  GameServer.hpp  GameState.cpp  GameState.hpp  Lobby.cpp  Tower.cpp  Tower.hpp  main.cpp
server/game/: Entity.cpp  Entity.hpp  GameState.cpp  GameState.hpp  Tower.cpp
server/game/systems/: CombatSystem.cpp  CombatSystem.hpp  MovementSystem.cpp  MovementSystem.hpp  WinCondition.cpp  WinCondition.hpp
server/lobby/: Lobby.hpp
server/network/: GameServer.cpp  GameServer.hpp
shared/: Constants.hpp  Packets.hpp  TroopType.hpp
